<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:gravity="center">
  <LinearLayout android:layout_width="400dip"
  android:layout_height="wrap_content"
  android:orientation="vertical" android:gravity="center">
  <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:id="@+id/edit_loginname" android:layout_margin="10dip" android:hint="@string/hint_loginname"
  />
  <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:id="@+id/edit_loginpass" android:layout_margin="10dip" android:hint="@string/hint_loginpass"
  android:password="true"/>
  <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
  android:id="@+id/button_login" android:layout_margin="5dip" android:text="@string/label_login"/>
  
  </LinearLayout>
</LinearLayout>
