<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@drawable/neworder_bg"
	android:gravity="center_horizontal">
	<!-- Define title row -->
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="50dip"
		android:layout_marginLeft="20dip" android:layout_marginRight="20dip">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_neworder_info"
			android:layout_alignParentLeft="true" android:textSize="16sp"
			android:textColor="#000000" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_neworder_time"
			android:layout_alignParentRight="true" android:textSize="16sp"
			android:id="@+id/text_neworder_time" android:textColor="#000000" />
	</RelativeLayout>
	<!-- Define seperate line -->
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:background="@drawable/line" />
	<!-- Define title and input line  -->
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:layout_marginLeft="90dip" android:layout_marginRight="90dip"
		android:gravity="center">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/label_postion"
				android:textSize="16sp" android:textColor="#000000"
				android:layout_marginTop="15dip" />
			<Spinner android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:id="@+id/spinner_position" android:layout_gravity="center"/>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/label_customerno"
				android:textSize="16sp" android:textColor="#000000"
				android:layout_marginTop="10dip" />
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/edit_customerno"
				android:gravity="center" android:maxLength="2" android:singleLine="true"
				android:inputType="number" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/label_tableno"
				android:textSize="16sp" android:textColor="#000000"
				android:layout_marginTop="10dip" />
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/edit_tableno"
				android:gravity="center" android:maxLength="3" android:singleLine="true"
				android:inputType="number" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/label_waiterno"
				android:textSize="16sp" android:textColor="#000000"
				android:layout_marginTop="10dip" />
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/edit_waiterno"
				android:gravity="center" android:maxLength="8" android:singleLine="true"
				android:inputType="text" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/label_notes"
				android:textSize="16sp" android:textColor="#000000"
				android:layout_marginTop="10dip" />
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/edit_notes"
				android:singleLine="true" android:inputType="text" />
			<ImageButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/imgbtn_neworder"
				android:src="@drawable/btn_neworder_before" android:background="#00000000"
				android:layout_marginTop="25dip" />
		</LinearLayout>

	<!-- Define continue order button -->
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<ImageButton android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/imgbtn_continueorder"
			android:layout_alignParentBottom="true" android:background="#00000000"
			android:src="@drawable/btn_continueorder_before" android:layout_marginLeft="10dip"/>
	</RelativeLayout>
</LinearLayout>
